even more travel plan stuff
